# homeflix

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: homeflix-requirements.md
docs/adr/: ADR-001-pydantic-domain-models.md  ADR-002-prefixed-external-ids.md  ADR-003-package-structure.md  ADR-004-dependency-injection.md  ADR-005-library-as-configuration-entity.md  ADR-006-media-file-variants.md  ADR-007-immutable-entities-with-convention.md  ADR-008-screaming-architecture.md  README.md  TEMPLATE.md
docs/standards/: api-i18n-guide.md  api-production-addons.md  api-response-standard-rest-v3.md  clean-architecture-decisions.md  exception-hierarchy-clean-architecture.md  external-api-integration-guide.md  logging-guide.md  observability-production-guide.md  testing-guide.md
migrations/: env.py
migrations/versions/: 2026_04_04_435d635e4b18_initial_schema.py
src/: main.py
src/application/media/: __init__.py
src/application/media/dtos/: __init__.py  movie_dtos.py  series_dtos.py
src/application/media/use_cases/: __init__.py  get_movie_by_id.py  get_series_by_id.py  list_movies.py  list_series.py
src/application/shared/exceptions/: __init__.py  application.py
src/building_blocks/: __init__.py
src/building_blocks/application/: __init__.py  errors.py  event_bus.py  pagination.py
src/building_blocks/domain/: __init__.py  aggregate_root.py  entity.py  errors.py  events.py  external_id.py  models.py  value_objects.py
src/building_blocks/infrastructure/: __init__.py  errors.py  in_process_event_bus.py
src/config/: logging.py  settings.py
src/config/containers/: __init__.py  collections.py  infrastructure.py  library.py  main.py  media.py  watch_progress.py
src/config/persistence/: __init__.py  base.py  session_manager.py
src/domain/media/: __init__.py  rule_codes.py
src/domain/media/entities/: __init__.py  episode.py  file_variant_mixin.py  movie.py  season.py  series.py
src/domain/media/repositories/: __init__.py  movie_repository.py  series_repository.py
src/domain/media/services/: __init__.py  file_selector.py
src/domain/media/value_objects/: __init__.py  duration.py  file_path.py  genre.py  hdr_format.py  media_file.py  media_id.py  resolution.py  title.py  tracks.py  video_codec.py  year.py
src/domain/shared/: __init__.py
src/domain/shared/exceptions/: __init__.py  base.py  domain.py
src/domain/shared/models/: __init__.py  domain_model.py  entity.py  external_id.py  value_object.py
src/domain/shared/value_objects/: __init__.py  file_path.py  language_code.py
src/infrastructure/: __init__.py
src/infrastructure/exceptions/: infrastructure.py
src/infrastructure/persistence/: __init__.py  database.py
src/infrastructure/persistence/mappers/: __init__.py  movie_mapper.py  series_mapper.py
src/infrastructure/persistence/models/: __init__.py  base.py  movie.py  (+3 more)
src/modules/: __init__.py
src/modules/collections/: __init__.py
src/modules/media/: __init__.py
src/modules/watch_progress/: __init__.py
src/shared_kernel/: __init__.py  episode_composite_id.py
src/shared_kernel/integration_events/: __init__.py
src/shared_kernel/value_objects/: __init__.py  file_path.py  image_url.py  language_code.py  media_type.py  tracks.py
tests/: conftest.py
tests/integration/: conftest.py
tests/shared_kernel/unit/: test_episode_composite_id.py
tests/unit/: conftest.py
(+284 files in other folders)
